--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "connected-react-router": "^6.2.1",
     "d3": "^4.9.1",
     "es6-promise": "^4.1.1",
     "joi": "^14.0.1",
@@ -25,7 +26,8 @@
     "react-dom": "^16.6.3",
     "react-image": "^1.5.1",
     "react-portal": "^4.2.0",
-    "react-redux": "^5.0.4",
+    "react-redux": "6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-tabs": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
