--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-image": "^1.5.1",
     "react-portal": "^4.2.0",
     "react-redux": "6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-tabs": "^1.0.0",
     "redux": "^3.6.0",
