--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "object-hash": "^1.3.0",
     "ramda": "^0.26.1",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.13.1",
     "react-image": "^1.5.1",
