--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --content-base static --mode development",
+    "dev:wsl": "npm run dev -- --host 0.0.0.0",
     "build": "NODE_ENV=production webpack --mode production",
     "test": "ava --verbose",
     "test-watch": "ava --watch",
@@ -13,34 +14,26 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@forensic-architecture/design-system": "0.6.1",
     "d3": "^5.7.0",
-    "es6-promise": "^4.1.1",
-    "esm": "^3.2.25",
     "joi": "^14.0.1",
-    "js-yaml": "^3.13.1",
     "leaflet": "^1.0.3",
     "marked": "^0.7.0",
     "moment": "^2.26.0",
-    "normalizr": "^3.2.3",
-    "npm-check-updates": "^3.1.20",
     "object-hash": "^1.3.0",
     "ramda": "^0.26.1",
-    "react": "^16.6.3",
+    "react": "^16.13.1",
     "react-device-detect": "^1.6.2",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.13.1",
     "react-image": "^1.5.1",
     "react-portal": "^4.2.0",
     "react-redux": "^5.0.4",
     "react-tabs": "3.0.0",
-    "react-zoom-pan-pinch": "^1.6.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "uuid": "^3.1.0",
-    "video-react": "^0.13.1",
-    "video.js": "^5.19.2",
-    "whatwg-fetch": "^2.0.3"
+    "supercluster": "^7.1.0",
+    "video-react": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -53,7 +46,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mocha": "^5.2.0",
-    "node-sass": "4.12.0",
+    "node-sass": "4.13.1",
     "redux-devtools": "^3.4.0",
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
