--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.12.3",
     "@forensic-architecture/design-system": "0.6.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@react-three/drei": "^2.2.17",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -56,6 +57,7 @@
     "jest-watch-typeahead": "0.6.1",
     "joi": "^14.0.1",
     "leaflet": "^1.0.3",
+    "lerp": "^1.0.3",
     "lint-staged": "^10.5.3",
     "marked": "^0.7.0",
     "mini-css-extract-plugin": "0.11.3",
@@ -81,6 +83,7 @@
     "react-redux": "^5.0.4",
     "react-refresh": "^0.8.3",
     "react-tabs": "3.0.0",
+    "react-three-fiber": "^5.3.14",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
@@ -91,6 +94,7 @@
     "style-loader": "1.3.0",
     "supercluster": "^7.1.0",
     "terser-webpack-plugin": "4.2.3",
+    "three": "^0.124.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
     "video-react": "^0.13.1",
