--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '12'
 
       - run: npm install
+      - run: cp example.config.js config.js
       - run: npm test
         env:
           CI: true
