--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "connected-react-router": "^6.9.1",
     "css-loader": "4.3.0",
     "d3": "^5.7.0",
     "dotenv": "8.2.0",
@@ -47,6 +48,7 @@
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
+    "history": "^5.0.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "^4.3.5",
     "identity-obj-proxy": "3.0.0",
@@ -78,8 +80,9 @@
     "react-dom": "^16.13.1",
     "react-image": "^1.5.1",
     "react-portal": "^4.2.0",
-    "react-redux": "^5.0.4",
+    "react-redux": "^6.0.0",
     "react-refresh": "^0.8.3",
+    "react-router": "^5.2.0",
     "react-tabs": "3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
