--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.12.3",
     "@forensic-architecture/design-system": "0.6.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@react-three/drei": "^3.10.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -47,6 +48,7 @@
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
+    "gltfjsx": "^3.1.4",
     "html-webpack-plugin": "4.5.0",
     "husky": "^4.3.5",
     "identity-obj-proxy": "3.0.0",
@@ -73,14 +75,16 @@
     "ramda": "^0.26.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.1",
+    "react-dev-utils": "^11.0.4",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.13.1",
     "react-image": "^1.5.1",
+    "react-intersection-observer": "^8.31.0",
     "react-portal": "^4.2.0",
     "react-redux": "^5.0.4",
     "react-refresh": "^0.8.3",
     "react-tabs": "3.0.0",
+    "react-three-fiber": "^5.3.19",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
@@ -91,6 +95,7 @@
     "style-loader": "1.3.0",
     "supercluster": "^7.1.0",
     "terser-webpack-plugin": "4.2.3",
+    "three": "^0.126.1",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
     "video-react": "^0.13.1",
