--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "reselect": "^3.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "8.0.2",
+    "sass-loader": "10.2.1",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
     "supercluster": "^7.1.0",
@@ -103,7 +103,7 @@
     "@babel/highlight": "^7.14.5",
     "ava": "1.0.0-beta.8",
     "mocha": "^5.2.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^6.0",
     "redux-devtools": "^3.4.0"
   },
   "lint-staged": {
