--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
+    "screenfull": "^5.2.0",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
     "supercluster": "^7.1.0",
