--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "reselect": "^3.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
+    "screenfull": "^5.2.0",
     "sass-loader": "10.2.1",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
