--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
-    "d3": "^5.7.0",
+    "d3": "^7.4.2",
+    "dayjs": "^1.11.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -58,7 +59,6 @@
     "lint-staged": "^10.5.3",
     "marked": "^0.7.0",
     "mini-css-extract-plugin": "0.11.3",
-    "moment": "^2.26.0",
     "object-hash": "^1.3.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -86,8 +86,8 @@
     "reselect": "^3.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "screenfull": "^5.2.0",
     "sass-loader": "10.2.1",
+    "screenfull": "^5.2.0",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
     "supercluster": "^7.1.0",
